Bug #44114 Falcon recovery Error: page 5342/1 wrong page type, expected 5 got 511

This patch makes sure pages written are valid (at least they have valid page types and page numbers) 
Falcon will assert if garbage data is written to the tablespaces. This will make errors like "got page type 511" impossible. The actual error that
causes page corruption  will be simpler to find.